# aruco-map-locator

./: .gitignore  .gitmodules  LICENSE  README.md  cam_params.yaml  camera_calibration.py  pyproject.toml  requirements-base.txt  requirements-gui.txt  setup.cfg
.github/workflows/: lint.yml
cnn/: cnn_model.ipynb  dataset_generation.py
dockerfile/: Dockerfile
model/: cnn_model.ipynb  dataset_generation.py
ros2_ws/src/aruco_map_locator/: package.xml  setup.cfg  setup.py
ros2_ws/src/aruco_map_locator/aruco_map_locator/: aruco_detection.py  aruco_processing.py  kalman_filter.py  params.py
ros2_ws/src/aruco_map_locator/launch/: aruco_map_locator_launch.py
ros2_ws/src/aruco_map_locator/test/: test_copyright.py  test_flake8.py  test_pep257.py
ros2_ws/src/image_provider/: CMakeLists.txt  package.xml
ros2_ws/src/image_provider/config/: cam_params.yaml
ros2_ws/src/image_provider/src/: image_publisher.cpp  image_subscriber.cpp
ros2_ws/src/pose2d_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pose2d_msgs/msg/: Pose2D.msg
unity_ws/RobotSimulation/Assets/: msgbrowser_settings.asset
unity_ws/RobotSimulation/Assets/Images/Materials/: BlueColor.mat  GreyColor.mat  YellowColor.mat  playmat.mat
unity_ws/RobotSimulation/Assets/Resources/: ROSConnectionPrefab.prefab
unity_ws/RobotSimulation/Assets/RosMessages/Pose2d/msg/: Pose2DMsg.cs
unity_ws/RobotSimulation/Assets/Scenes/: SampleScene.unity
unity_ws/RobotSimulation/Assets/Scripts/: BlueRobot.cs  RobotController.cs  YellowRobot.cs
unity_ws/RobotSimulation/ProjectSettings/: ProjectSettings.asset
unity_ws/RobotSimulation/Temp/: workerlic
unity_ws/RobotSimulation/Temp/__Backupscenes/: 0.backup
unity_ws/RobotSimulation/UserSettings/: EditorUserSettings.asset
unity_ws/RobotSimulation/UserSettings/Layouts/: default-6000.dwlt
