[metadata]
name = aruco_map_locator
version = 0.1.0
author = Ousmane Thiongane
author_email = ousmane.thionagne@outlook.com
url = https://github.com/Mowibox/aruco-map-locator
description = ROS 2 code for locating and estimating a robot position on a map using Aruco tags
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    -r requirements-base.txt

[options.extras_require]
gui =
    -r requirements-gui.txt
headless =
    -r requirements-headless.txt

[options.packages.find]
where=.

[options.extras_require]
dev =
    black==25.12.0
    isort==5.13.2
    mypy==1.8.0
    flake8==7.1.1
    pytest==7.4.3

[mypy]
ignore_missing_imports = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True

[tool:pytest]
testpaths = tests

[tool.isort]
profile = black

[tool.black]
line-length = 128
